# synapse

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  configure.ac
config/: macros.m4
doc/: Makefile.am  Makefile.in  references.bib  synapse_reference.aux  synapse_reference.bbl  synapse_reference.blg  synapse_reference.out  synapse_reference.tex  synapse_reference.toc
scripts/: Makefile.am  mrnapp-config.in  mrnrun.in  sourceme.sh.in  synapse-config.in
src/: BackEnd.cpp  BackEnd.h  BackProtocol.cpp  BackProtocol.h  FrontEnd.cpp  FrontEnd.h  FrontProtocol.cpp  FrontProtocol.h  MRNetApp.cpp  MRNetApp.h  MRNet_tags.h  MRNet_wrappers.h  Makefile.am  PendingConnections.cpp  PendingConnections.h  Protocol.cpp  Protocol.h
test/: BE.cpp  FE.cpp  Makefile-example  Makefile.am  Ping_BE.cpp  Ping_BE.h  Ping_FE.cpp  Ping_FE.h  run-example  run.sh  tags.h  topology_1x4.txt
